--- a/JITCompHaskell.cabal
+++ b/JITCompHaskell.cabal
@@ -6,11 +6,10 @@ cabal-version: 1.12
 
 name:           JITCompHaskell
 version:        0.1.0.0
-description:    Please see the README on GitHub at <https://github.com/githubuser/JITCompHaskell#readme>
-homepage:       https://github.com/githubuser/JITCompHaskell#readme
-bug-reports:    https://github.com/githubuser/JITCompHaskell/issues
-author:         Author name here
-maintainer:     example@example.com
+description:    Please see the README on GitHub at <https://github.com/Prof-Edil/projeto-JIT-compiler/blob/main/README.md>
+homepage:       https://github.com/Prof-Edil/projeto-JIT-compiler/blob/main/README.md
+bug-reports:    https://github.com/Prof-Edil/projeto-JIT-compiler/issues
+author:         Ivan, Johann, Maria Gabriela
 copyright:      2021 Author name here
 license:        BSD3
 license-file:   LICENSE
@@ -21,40 +20,32 @@ extra-source-files:
 
 source-repository head
   type: git
-  location: https://github.com/githubuser/JITCompHaskell
+  location: https://github.com/Prof-Edil/projeto-JIT-compiler
 
 library
-  exposed-modules:
-      Lib
-  other-modules:
-      Paths_JITCompHaskell
-  hs-source-dirs:
-      src
   build-depends:
       base >=4.7 && <5
+    , haskeline     >= 0.7.1.2
+    , llvm-hs       >= 9.0
+    , llvm-hs-pure  >= 9.0
+    , mtl           >= 2.1.3
+    , transformers  >= 0.3.0.0 && < 0.6
   default-language: Haskell2010
 
-executable JITCompHaskell-exe
+executable chapter2
   main-is: Main.hs
   other-modules:
-      Paths_JITCompHaskell
+      Parser
+      Syntax
+      Lexer
   hs-source-dirs:
-      app
-  ghc-options: -threaded -rtsopts -with-rtsopts=-N
+      src/chapter2
   build-depends:
-      JITCompHaskell
-    , base >=4.7 && <5
-  default-language: Haskell2010
-
-test-suite JITCompHaskell-test
-  type: exitcode-stdio-1.0
-  main-is: Spec.hs
-  other-modules:
-      Paths_JITCompHaskell
-  hs-source-dirs:
-      test
-  ghc-options: -threaded -rtsopts -with-rtsopts=-N
-  build-depends:
-      JITCompHaskell
-    , base >=4.7 && <5
+      base >=4.7 && <5
+    , haskeline     >= 0.7.1.2
+    , llvm-hs       >= 9.0
+    , llvm-hs-pure  >= 9.0
+    , parsec        >= 3.1
+    , mtl           >= 2.1.3
+    , transformers  >= 0.3.0.0 && < 0.6
   default-language: Haskell2010
