--- a/projeto-JIT-compiler.cabal
+++ b/projeto-JIT-compiler.cabal
@@ -33,6 +33,28 @@ library
       Paths_projeto_JIT_compiler
   hs-source-dirs:
       src
+  default-extensions:
+      OverloadedStrings
+      NoMonomorphismRestriction
+      RankNTypes
+      LambdaCase
+      UnicodeSyntax
+      GADTs
+      ScopedTypeVariables
+      DeriveGeneric
+      DerivingStrategies
+      FlexibleContexts
+      FlexibleInstances
+      DataKinds
+      GeneralizedNewtypeDeriving
+      DefaultSignatures
+      QuasiQuotes
+      TypeOperators
+      MultiParamTypeClasses
+      MultiWayIf
+      TypeInType
+      DerivingVia
+      TypeApplications
   ghc-options: -ferror-spans -Wall -fno-warn-orphans -fno-warn-name-shadowing -fno-warn-type-defaults -j6
   build-depends:
       base >=4.7 && <5
@@ -53,6 +75,28 @@ executable JITCompHaskell-exe
       Paths_projeto_JIT_compiler
   hs-source-dirs:
       app
+  default-extensions:
+      OverloadedStrings
+      NoMonomorphismRestriction
+      RankNTypes
+      LambdaCase
+      UnicodeSyntax
+      GADTs
+      ScopedTypeVariables
+      DeriveGeneric
+      DerivingStrategies
+      FlexibleContexts
+      FlexibleInstances
+      DataKinds
+      GeneralizedNewtypeDeriving
+      DefaultSignatures
+      QuasiQuotes
+      TypeOperators
+      MultiParamTypeClasses
+      MultiWayIf
+      TypeInType
+      DerivingVia
+      TypeApplications
   ghc-options: -ferror-spans -Wall -fno-warn-orphans -fno-warn-name-shadowing -fno-warn-type-defaults -j6 -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
@@ -75,6 +119,28 @@ test-suite JITCompHaskell-test
       Paths_projeto_JIT_compiler
   hs-source-dirs:
       test
+  default-extensions:
+      OverloadedStrings
+      NoMonomorphismRestriction
+      RankNTypes
+      LambdaCase
+      UnicodeSyntax
+      GADTs
+      ScopedTypeVariables
+      DeriveGeneric
+      DerivingStrategies
+      FlexibleContexts
+      FlexibleInstances
+      DataKinds
+      GeneralizedNewtypeDeriving
+      DefaultSignatures
+      QuasiQuotes
+      TypeOperators
+      MultiParamTypeClasses
+      MultiWayIf
+      TypeInType
+      DerivingVia
+      TypeApplications
   ghc-options: -ferror-spans -Wall -fno-warn-orphans -fno-warn-name-shadowing -fno-warn-type-defaults -j6 -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       JITCompHaskell
