Fixed some minor errors

--- a/package.yaml
+++ b/package.yaml
@@ -32,6 +32,7 @@ dependencies:
 - mtl
 
 default-extensions:
+  - NoImplicitPrelude
   - OverloadedStrings
   - NoMonomorphismRestriction
   - RankNTypes
